# SmtpClient-for-Qt

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  SMTPEmail.pc.in  SMTPEmail.pri  SMTPEmail.pro  SmtpMime  ekezetek.cpp  emailaddress.cpp  mail.cpp  mail.h  main.cpp  mimeattachment.cpp  mimehtml.cpp  mimeinlinefile.h  mimemessage.cpp  mimemessage.h  mimepart.cpp  mimepart.h  qtsmtpclient.pri  qtsmtpclient.pro  smtpclient.cpp  smtpclient.h
.github/workflows/: linux-build.yml
Src/: mimemessage.cpp  smtpclient.cpp
cmake/: CompileSettings.cmake  InstallProjectConfig.cmake  InstallSettings.cmake  SmtpClient-for-QtConfig.cmake.in
demos/: .gitignore  demo1.cpp  demo3.cpp  demo4.cpp  demo_vars.h
demos/demo1/: demo1.cpp  demo1.pro
demos/demo2/: demo2.cpp  demo2.pro  sendemail.cpp  sendemail.h  sendemail.ui
demos/demo3/: demo3.cpp  demo3.pro
demos/demo4/: .gitignore  demo4.cpp  demo4.pro
src/: CMakeLists.txt  SMTPEmail.pro  SmtpMime  emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimeattachment.h  mimebase64encoder.cpp  mimebase64formatter.cpp  mimebytearrayattachment.cpp  mimecontentencoder.cpp  mimecontentformatter.cpp  mimecontentformatter.h  mimefile.cpp  mimefile.h  mimehtml.cpp  mimehtml.h  mimeinlinefile.cpp  mimeinlinefile.h  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimemultipart.h  mimepart.cpp  mimepart.h  mimeqpencoder.cpp  mimeqpformatter.cpp  mimetext.cpp  mimetext.h  quotedprintable.cpp  quotedprintable.h  smtpclient.cpp  smtpclient.h  smtpexports.h
test/: connect_data.txt  connectiontest.cpp  connectiontest.h  main.cpp  test.pro
